src/test/ui/issues/issue-55796.stderr
error[E0601]: `main` function not found in crate `issue_55796`
   |
   = note: consider adding a `main` function to `$DIR/issue-55796.rs`

error[E0495]: cannot infer an appropriate lifetime due to conflicting requirements
  --> $DIR/issue-55796.rs:16:9
   |
LL |         Box::new(self.out_edges(u).map(|e| e.target()))
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: first, the lifetime cannot outlive the lifetime 'a as defined on the trait at 5:17...
  --> $DIR/issue-55796.rs:5:17
   |
LL | pub trait Graph<'a> {
   |                 ^^
note: ...so that the type `std::iter::Map<<Self as Graph<'a>>::EdgesIter, [closure@$DIR/issue-55796.rs:16:40: 16:54]>` will meet its required lifetime bounds
  --> $DIR/issue-55796.rs:16:9
   |
LL |         Box::new(self.out_edges(u).map(|e| e.target()))
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: but, the lifetime must be valid for the static lifetime...
   = note: ...so that the expression is assignable:
           expected std::boxed::Box<(dyn std::iter::Iterator<Item=<Self as Graph<'a>>::Node> + 'static)>
              found std::boxed::Box<dyn std::iter::Iterator<Item=<Self as Graph<'a>>::Node>>

error[E0495]: cannot infer an appropriate lifetime due to conflicting requirements
  --> $DIR/issue-55796.rs:20:9
   |
LL |         Box::new(self.in_edges(u).map(|e| e.target()))
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: first, the lifetime cannot outlive the lifetime 'a as defined on the trait at 5:17...
  --> $DIR/issue-55796.rs:5:17
   |
LL | pub trait Graph<'a> {
   |                 ^^
note: ...so that the type `std::iter::Map<<Self as Graph<'a>>::EdgesIter, [closure@$DIR/issue-55796.rs:20:39: 20:53]>` will meet its required lifetime bounds
  --> $DIR/issue-55796.rs:20:9
   |
LL |         Box::new(self.in_edges(u).map(|e| e.target()))
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: but, the lifetime must be valid for the static lifetime...
   = note: ...so that the expression is assignable:
           expected std::boxed::Box<(dyn std::iter::Iterator<Item=<Self as Graph<'a>>::Node> + 'static)>
              found std::boxed::Box<dyn std::iter::Iterator<Item=<Self as Graph<'a>>::Node>>

error: aborting due to 3 previous errors

Some errors occurred: E0495, E0601.
For more information about an error, try `rustc --explain E0495`.
